<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop_champs_text"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_title" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="30dp"
        android:text="@string/app_button_name_reservation"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_button" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/app_button_name_monProfil"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_button" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/app_textView_name_recherche"
        android:textAlignment="center"
        android:textSize="@dimen/text_size_champs_text" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        android:hint="Date de début de réservation"
        android:inputType="text"
        android:textSize="@dimen/text_size_button" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray"
        android:hint="Date de fin de réservation"
        android:inputType="text"
        android:textSize="@dimen/text_size_button" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/app_button_name_recherche"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_size_button" />


</LinearLayout>